kubernetes/ufoo/10-tech/observability/prometheus/prometheus/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.agrrh.com`) || Host(`prometheus.5426b488.nip.io`)
      middlewares:
        - name: whitelist
          namespace: traefik
      services:
        - kind: Service
          name: prometheus-operated
          namespace: metrics
          port: 9090
